# home-assignment

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
src/: aggregator.py  dimensions.py  enrichment.py  formatter.py  logger.py  main.py  models.py  parser.py  reader.py
tests/: test_aggregator.py  test_dimensions.py  test_enrichment.py  test_formatter.py  test_parser.py
